# higherspace

./: .gitignore  Cargo.toml  backlog.md  dis.blend  dis.blend1  mesh_from_db.py  polydb.sqlite3
exact/: Cargo.toml  README.md  readme.md
exact/src/: enums.rs  io_traits.rs  lib.rs  structs.rs  traits.rs
exact/src/expr_field/: mod.rs
exact/src/expr_field/io/: ascii.rs  char.rs  mod.rs  parse_display.rs  print_display.rs
exact/src/expr_field/ops/: add.rs  mod.rs  mul.rs
exact/src/expr_field/simplify/: mod.rs  prod.rs  sum.rs
exact/src/expr_field/structs/: mod.rs  prod.rs  sqrt.rs  string_expression.rs  sum.rs  type_field.rs
exact/src/expr_rc/: add.rs  from.rs  inv.rs  mod.rs  mul.rs  simplify.rs
exact/src/expr_rc/from/: mod.rs  prod.rs  pvec.rs  svec.rs
exact/src/expr_rc/io/: mod.rs  parse_display.rs  print_display.rs  scanner.rs  traits.rs
exact/src/expr_rc/num_traits/: inv.rs  mod.rs
exact/src/expr_rc/ops/: add.rs  mod.rs  mul.rs  mul_assign.rs
exact/src/expr_rc/simplify/: mod.rs  sum.rs
exact/src/expr_rc/structs/: consts.rs  mod.rs  sqrt.rs  string_expression.rs
exact/src/io/: parse_display.rs  print_debug.rs  print_display.rs  scanner.rs  traits.rs
exact/src/structs/: consts.rs  mod.rs  only_read_grow_array.rs  prod.rs  string_expression.rs  sum.rs
exact_macros/: Cargo.toml
polytope/: Cargo.toml
polytope/src/: main.rs  parse.rs
src/: exact.rs  lib.rs  main.rs
