[package]
name = "exact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appendlist = "1.4.0"
fraction = { git = "https://github.com/dnsl48/fraction", version = "0.14.0" }
lyn = "0.1.0"
num = "0.4.1"
num-traits = "0.2.17"
prime_factorization = "1.0.4"
proptest = "1.4.0"
