[package]
name = "exact"
description = "drop-in float replacement for exact arithmetic"
version = "0.1.0"
edition = "2021"
authors = ["Fee Gevaert"]
homepage = "https://github.com/feefladder/higherspace/"
repository = "https://github.com/feefladder/higherspace/"

license = "AGPL-3.0-or-later AND WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appendlist = "1.4.0"
fraction = { git = "https://github.com/dnsl48/fraction", version = "0.14.0" }
lyn = "0.1.0"
num = "0.4.1"
num-traits = "0.2.17"
ordered-float = "4.2.0"
prime_factorization = "1.0.4"
proptest = "1.4.0"
